Fixed overflow in events name and groups name
Above title... Also added better hover effect for /user/events to be more in line with group/events, and changed whole box to be anchor, instead of just the text

--- a/public/stylesheets/groupEvents.css
+++ b/public/stylesheets/groupEvents.css
@@ -31,7 +31,7 @@
     border-radius: 15px;
     box-shadow: 4px 4px rgba(0, 0, 0, 0.3);
     position: relative;
-    transition: top 0.15s ease 0s;
+    transition: all 0.1s;
     top: 0;
 }
 
@@ -42,8 +42,17 @@
 }
 
 .groupEvents-event-title {
-    font-weight: 600;
-    font-size: 20px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+  
+    font-weight: bold;
+    color: black;
+    max-width: 200px;
+    height: 1.1em;
+    font-size: 16px;
+    margin-bottom: 6px;
 }
 
 .groupEvents-event-description {
